# bssrdf-estimate

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.rst  main.py  requirements.txt  setup.py
bssrdf_estimate/: __init__.py  vector3d.py
bssrdf_estimate/hdr/: __init__.py  hdr_load.py  hdr_pixel.py  luminance.py  tonemap.py
bssrdf_estimate/imfilter/: __init__.py
bssrdf_estimate/interface/: __init__.py  bssrdf_redner_widget.py  bssrdf_render_widget.py  console_widget.py  control_widget.py  curve_plot_widget.py  image_widget.py  main_window.py
bssrdf_estimate/tools/: __init__.py  affine_transform.py  bssrdf_estimator.py  depth_estimator.py  diffuse_bssrdf.py  directional_light.py  light_estimator.py  project.py  render_parameters.py  solve_homogeneous.py  vector3d.py
bssrdf_estimate/tools/solvers/: __init__.py  polyfit.py  solve_con.py  solve_unc.py
native/: CMakeLists.txt  bssrdf_filter.cc  bssrdf_render.cc  render_bssrdf.cc
sample/: milk_image.hdr  project.xml
submodule/: CMakeLists.txt
tests/: test_vector3d.py
